# kafka

./: .env  .env.example  Dockerfile  KAFKA_FLINK_GUIDE.md  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  kafka-streaming-example-router.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
app/api/: admin.py  analytics.py  examples.py  health.py  streaming.py
app/core/: config.py  database.py  logging_config.py
app/models/: __init__.py  base.py  event.py  order.py  user.py
app/schemas/: event.py  order.py  user.py
app/services/: kafka_consumer.py  kafka_service.py  kinesis_service.py  stream_processor.py
config/debezium/: connect-distributed.properties  postgres-connector.json  sink-connectors.json
config/prometheus/: prometheus.yml
docker/localstack/init/: 01-setup-kinesis.sh
docker/postgres/init/: 01-init-database.sql  01-init-db.sql
flink-jobs/: order-anomaly-detection.sql  product-popularity-analytics.sql  user-session-analytics.sql
logs/flink/: flink--standalonesession-0-flink-jobmanager.log.1
migrations/: env.py
scripts/: reset-debezium.sh  setup-debezium.sh  start-services.sh  stop-services.sh  test-examples.sh  test-streaming.sh
